update banner & index

--- a/public/index.html
+++ b/public/index.html
@@ -103,8 +103,8 @@
       <!-- services section start -->
       <div class="services_section layout_padding">
          <div class="container">
-            <h1 class="services_taital">Services </h1>
-            <p class="services_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration</p>
+            <h1 class="services_taital">Improvements</h1>
+            <p class="services_text">Empower Change: Share Your Valuable Insights for a Better Experience - Submit Your Suggestions and Ideas for Improvements on KICT F&S Complaint Platform</p>
             <div class="services_section_2">
                <div class="row">
                   <div class="col-md-4">
