--- a/public/index.html
+++ b/public/index.html
@@ -109,15 +109,15 @@
                <div class="row">
                   <div class="col-md-4">
                      <div><img src="images/img-1.png" class="services_img"></div>
-                     <div class="btn_main"><a href="#">Rafting</a></div>
+                     <div class="btn_main"><a href="#">Feedback</a></div>
                   </div>
                   <div class="col-md-4">
                      <div><img src="images/img-2.png" class="services_img"></div>
-                     <div class="btn_main active"><a href="#">Hiking</a></div>
+                     <div class="btn_main active"><a href="#">Suggestion</a></div>
                   </div>
                   <div class="col-md-4">
                      <div><img src="images/img-3.png" class="services_img"></div>
-                     <div class="btn_main"><a href="#">Camping</a></div>
+                     <div class="btn_main"><a href="#">Satisfaction</a></div>
                   </div>
                </div>
             </div>
@@ -131,7 +131,7 @@
                <div class="col-md-6">
                   <div class="about_taital_main">
                      <h1 class="about_taital">About Us</h1>
-                     <p class="about_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All </p>
+                     <p class="about_text">Welcome to KICT F&S Complaint, your dedicated platform for expressing concerns and registering complaints related to dissatisfaction with facilities and surroundings at the International Islamic University Malaysia's Kulliyyah of Information and Communication Technology (KICT). </p>
                      <div class="readmore_bt"><a href="#">Read More</a></div>
                   </div>
                </div>
