remove video&testimonial

--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,8 @@
          </div>
       </div>
       <!-- about section end -->
-      <!-- blog section start -->
+      <!--
+      blog section start
       <div class="blog_section layout_padding">
          <div class="container">
             <h1 class="blog_taital">See Our  Video</h1>
@@ -152,8 +153,10 @@
             </div>
          </div>
       </div>
-      <!-- blog section end -->
-      <!-- client section start -->
+       blog section end -->
+      <!-- client section start
+
+
       <div class="client_section layout_padding">
          <div class="container">
             <h1 class="client_taital">Testimonial</h1>
