--- a/public/index.html
+++ b/public/index.html
@@ -89,9 +89,9 @@
                   </div>
                   <div class="carousel-item">
                      <div class="container">
-                        <h1 class="banner_taital">Satisfaction</h1>
-                        <p class="banner_text">On a scale of 1 to 5 (1 being the lowest and 5 being the highest), how satisfied are you with our Complaint Management System overall?</p>
-                        <div class="read_bt"><a href="#">Submit</a></div>
+                        <h1 class="banner_taital">Improvement</h1>
+                        <p class="banner_text">Help Us Improve</p>
+                        <div class="read_bt"><a href="#">Submit Improvement</a></div>
                      </div>
                   </div>
                </div>
@@ -131,7 +131,7 @@
                <div class="col-md-6">
                   <div class="about_taital_main">
                      <h1 class="about_taital">About Us</h1>
-                     <p class="about_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All </p>
+                     <p class="about_text">Welcome to KICT F&S Complaint, your dedicated platform for expressing concerns and registering complaints related to dissatisfaction with facilities and surroundings at the International Islamic University Malaysia's Kulliyyah of Information and Communication Technology (KICT). </p>
                      <div class="readmore_bt"><a href="#">Read More</a></div>
                   </div>
                </div>
