--- a/public/contact.html
+++ b/public/contact.html
@@ -103,7 +103,7 @@
                <div class="call_text"><img src="images/call-icon.png"></div>
                <div class="call_text"><a href="#">Call +01 1234567890</a></div>
                <div class="call_text"><img src="images/mail-icon.png"></div>
-               <div class="call_text"><a href="#">demo@gmail.com</a></div>
+               <div class="call_text"><a href="#">F&S@gmail.com</a></div>
             </div>
             <div class="social_icon">
                <ul>
@@ -119,7 +119,7 @@
       <!-- copyright section start -->
       <div class="copyright_section">
          <div class="container">
-            <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Free html  Templates</a></p>
+            <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Web-4-Life</a></p>
          </div>
       </div>
       <!-- copyright section end -->
