--- a/public/about.html
+++ b/public/about.html
@@ -82,7 +82,7 @@
                   </div>
                </div>
                <div class="col-md-6 padding_right_0">
-                  <div><img src="images/about-img.png" class="about_img"></div>
+                  <div><img src="images/kict.JPEG" class="about_img"></div>
                </div>
             </div>
          </div>
@@ -99,7 +99,7 @@
                <div class="call_text"><img src="images/call-icon.png"></div>
                <div class="call_text"><a href="#">Call +01 1234567890</a></div>
                <div class="call_text"><img src="images/mail-icon.png"></div>
-               <div class="call_text"><a href="#">demo@gmail.com</a></div>
+               <div class="call_text"><a href="#">F&S@gmail.com</a></div>
             </div>
             <div class="social_icon">
                <ul>
@@ -115,7 +115,7 @@
       <!-- copyright section start -->
       <div class="copyright_section">
          <div class="container">
-            <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Free html  Templates</a></p>
+            <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Web-4-Life</a></p>
          </div>
       </div>
       <!-- copyright section end -->
