--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
          <div class="header_main">
             <div class="mobile_menu">
                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                  <div class="logo_mobile"><a href="index.html"><img src="images/logo.png"></a></div>
+                  <div class="logo_mobile"><a href="index.html"><img src="images/fands.png"></a></div>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                   </button>
@@ -108,12 +108,12 @@
             <div class="services_section_2">
                <div class="row">
                   <div class="col-md-4">
-                     <div><img src="images/img-1.png" class="services_img"></div>
+                     <div><img src="images/feedback.jpg" class="services_img"></div>
                      <div class="btn_main"><a href="#">Feedback</a></div>
                   </div>
                   <div class="col-md-4">
-                     <div><img src="images/img-2.png" class="services_img"></div>
-                     <div class="btn_main active"><a href="#">Suggestion</a></div>
+                     <div><img src="images/suggestion.jpg" class="services_img"></div>
+                     <div class="btn_main"><a href="#">Suggestion</a></div>
                   </div>
                   <div class="col-md-4">
                      <div><img src="images/img-3.png" class="services_img"></div>
@@ -136,7 +136,7 @@
                   </div>
                </div>
                <div class="col-md-6 padding_right_0">
-                  <div><img src="images/about-img.png" class="about_img"></div>
+                  <div><img src="images/kict.JPEG" class="about_img"></div>
                </div>
             </div>
          </div>
@@ -229,7 +229,7 @@
       <div class="choose_section layout_padding">
          <div class="container">
             <h1 class="choose_taital">Why Choose Us</h1>
-            <p class="choose_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All </p>
+            <p class="choose_text">Our dedicated customer support team is committed to assisting you at every step. Whether you have questions about the complaint submission process or need additional information, we are here to provide reliable support </p>
             <div class="read_bt_1"><a href="#">Read More</a></div>
             <div class="newsletter_box">
                <h1 class="let_text">Let Start Talk with Us</h1>
@@ -249,7 +249,7 @@
                <div class="call_text"><img src="images/call-icon.png"></div>
                <div class="call_text"><a href="#">Call +01 1234567890</a></div>
                <div class="call_text"><img src="images/mail-icon.png"></div>
-               <div class="call_text"><a href="#">demo@gmail.com</a></div>
+               <div class="call_text"><a href="#">F&S@gmail.com</a></div>
             </div>
             <div class="social_icon">
                <ul>
@@ -265,7 +265,7 @@
       <!-- copyright section start -->
       <div class="copyright_section">
          <div class="container">
-            <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Free html  Templates</a></p>
+            <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Web-4-Life</a></p>
          </div>
       </div>
       <!-- copyright section end -->
