--- a/public/about.html
+++ b/public/about.html
@@ -53,12 +53,13 @@
                         <li class="nav-item">
                            <a class="nav-link " href="contact.html">Contact</a>
                         </li>
+                        
                      </ul>
                   </div>
                </nav>
             </div>
             <div class="container-fluid">
-               <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
+               <div class="logo"><a href="index.html"><img src=""></a></div>
                <div class="menu_main">
                   <ul>
                      <li class="active"><a href="index.html">Home</a></li>
