--- a/public/about.html
+++ b/public/about.html
@@ -38,7 +38,7 @@
          <div class="header_main">
             <div class="mobile_menu">
                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                  <div class="logo_mobile"><a href="index.html"><img src="images/logo.png"></a></div>
+                  <div class="logo_mobile"><a href="index.html"><img src="images/kictfs.png"></a></div>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                   </button>
@@ -53,13 +53,13 @@
                         <li class="nav-item">
                            <a class="nav-link " href="contact.html">Contact</a>
                         </li>
-                        
+
                      </ul>
                   </div>
                </nav>
             </div>
             <div class="container-fluid">
-               <div class="logo"><a href="index.html"><img src=""></a></div>
+               <div class="logo"><a href="index.html"><img src="images/kictfs.png"></a></div>
                <div class="menu_main">
                   <ul>
                      <li class="active"><a href="index.html">Home</a></li>
