--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
          <div class="header_main">
             <div class="mobile_menu">
                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                  <div class="logo_mobile"><a href="index.html"><img src="images/fands.png"></a></div>
+                  <div class="logo_mobile"><a href="index.html"><img src="images/kictfs.png"></a></div>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                   </button>
@@ -59,13 +59,13 @@
                </nav>
             </div>
             <div class="container-fluid">
-               <div class="logo"><a href="index.html"><img src=""></a></div>
+               <div class="logo"><a href="index.html"><img src="images/kictfs.png"></a></div>
                <div class="menu_main">
                   <ul>
                      <li class="active"><a href="index.html">Home</a></li>
                      <li><a href="about.html">About</a></li>
                      <li><a href="contact.html">Contact us</a></li>
-                     
+
                  </ul>
                </div>
             </div>
